# py-splitp2p

./: .gitignore  .pre-commit-config.yaml  README.md  config_manager.py  crypto.py  currency.py  gui.py  ledger.py  main.py  models.py  network.py  node.py  pyproject.toml  requirements-dev.txt  requirements.txt  storage.py
.github/workflows/: ci.yml
docs/: manual-p2p-test-checklist.md
tests/: test_config_manager.py  test_crypto.py  test_currency.py  test_gui.py  test_ledger.py  test_models.py  test_network.py  test_smoke_app.py  test_storage.py
