[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "splitp2p"
version = "0.1.0"
description = "Decentralized, serverless expense splitting over libp2p — Tkinter prototype"
requires-python = ">=3.12"
dependencies = [
    "pynacl>=1.5",          # Ed25519 signing, SecretBox (XSalsa20-Poly1305)
    "libp2p>=0.6.0",        # GossipSub, mDNS discovery, noise transport
                            # network.py targets the >=0.6 API (host.run() as an
                            # async context manager, GossipSub() requiring explicit
                            # protocols/degree args) — older 0.1.x releases will not work
    "multiaddr>=0.0.9",     # IPFS bootstrap address parsing
    "qrcode[pil]>=7.4",     # QR code display (requires Pillow)
    "opencv-python>=4.8",   # QR code scanning via camera or image file
                            # Without this: text import only
    "Pillow>=10.0",         # Inline attachment preview (JPG, PNG, GIF, WEBP)
    "matplotlib>=3.7",      # Balance charts
    "fpdf2>=2.7",           # PDF export; CSV export works without this
]
# Stdlib (no install needed): tkinter (Debian/Ubuntu: sudo apt install python3-tk),
# sqlite3, urllib, threading, uuid

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "pre-commit>=3.5",
]

[tool.setuptools]
py-modules = [
    "config_manager",
    "crypto",
    "currency",
    "gui",
    "ledger",
    "main",
    "models",
    "network",
    "storage",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["venv"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern syntax for the target Python version)
    "B",    # flake8-bugbear (likely bugs / footguns)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie (misc lint rules)
    "RUF",  # ruff-specific rules
    "PTH",  # flake8-use-pathlib (prefer pathlib.Path over os.path)
]

[tool.mypy]
python_version = "3.12"
exclude = ["venv"]

[[tool.mypy.overrides]]
module = [
    "libp2p.*",
    "multiaddr.*",
    "qrcode.*",
    "cv2.*",
    "fpdf.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
